Opened 16 years ago

Closed 16 years ago

#3885 closed bug (fixed)

Live CD crash in attribute_overlay filesystem

Reported by: jonas.kirilla Owned by: mmlr
Priority: normal Milestone: R1
Component: File Systems Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

I was just fooling around with the live CD and dragged some text out of AboutSystem to the desktop, and soon thereafter selected the resulting file and pressed delete, resulting in a crash.

It seems to me that the system KDLs in the attribute_overlay fs when Tracker tries to move the file to trash. See attached backtrace.

Attachments (1)

attribute_overlay.txt (3.9 KB ) - added by jonas.kirilla 16 years ago.

Download all attachments as: .zip

Change History (3)

by jonas.kirilla, 16 years ago

Attachment: attribute_overlay.txt added

comment:1 by mmlr, 16 years ago

Owner: changed from axeld to mmlr
Status: newassigned

It's probably due to the complete lack of locking in both attribute and write overlay. It's a todo on my list. BTW the crash happens in write_overlay below the attribute_overlay, it doesn't really matter though.

comment:2 by mmlr, 16 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev30893. Any rename/move would cause a crash. And I really though I had tested that...

Note: See TracTickets for help on using tickets.