Fix two instances of handing wrong vnodes to the next layer in attribute_overlay. The target vnode in link and the toDir vnode in rename were passed directly, meaning that an attribute_overlay vnode was handed to the next layer causing crashes when moving/renaming a file on ISO-only CDs for example. Fixes #3885.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30893 a95241bf-73f2-0310-859d-f6bbb57e9c96